--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "vue-image-base64",
-  "version": "0.1.0",
+  "name": "vuejs-image-base64",
+  "version": "1.0.0",
   "description": "画像ファイルをBase64に変換するVue.js用コンポーネントです",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy-demo": "gh-pages -d dist"
+    "deploy-demo": "gh-pages -d dist",
+    "build-bundle": "vue-cli-service build --target lib --name vue-image-base64 ./src/library-main.js"
   },
-  "main": "./dist/index.js",
+  "main": "dist/vue-image-base64.common.js",
+  "unpkg": "./dist/vue-image-base64.umd.min.js",
+  "jsdelivr": "./dist/vue-image-base64.umd.min.js",
   "author": "isystk",
   "license": "MIT",
   "devDependencies": {
